--- a/Homework1.Rmd
+++ b/Homework1.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 >- Create a list of numbers 1 to 100 and name this list FirstHundred
 
 ```{r}
-
+TEST TEST TEST
 ```
 
 >- On your own, explore crusio1 and find the median and mean activity times:
